# jageocoder-sandbox

./: Dockerfile  README.md  compose.yml  pyproject.toml
.devcontainer/: compose.yml  devcontainer.json  postCreateCommand.sh
src/app/: main.py
