[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kixixixixi", email = "kixixixixi@gmail.com" }
]
dependencies = [
    "jageocoder>=2.1.6.post1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
